--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,8 +3,9 @@ NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -Iinclude
 
+MAIN = main.c
 SRCS = \
-$(addprefix src/, ) 
+$(addprefix src/, error.c valid_arg.c utils.c) 
 
 OBJ_DIR = obj
 OBJS = $(SRCS:src/%.c=$(OBJ_DIR)/%.o)
@@ -12,7 +13,7 @@ OBJS = $(SRCS:src/%.c=$(OBJ_DIR)/%.o)
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME) 
+	$(CC) $(CFLAGS) $(OBJS) $(MAIN) -o $(NAME) 
 
 $(OBJ_DIR)/%.o: src/%.c | $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@ 
