--- a/philo/Makefile
+++ b/philo/Makefile
@@ -13,20 +13,20 @@ OBJS = $(SRCS:src/%.c=$(OBJ_DIR)/%.o)
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) $(MAIN) -o $(NAME) 
+	@$(CC) $(CFLAGS) $(OBJS) $(MAIN) -o $(NAME) 
 
 $(OBJ_DIR)/%.o: src/%.c | $(OBJ_DIR)
-	$(CC) $(CFLAGS) -c $< -o $@ 
+	@$(CC) $(CFLAGS) -c $< -o $@ 
 
 $(OBJ_DIR) :
-	mkdir -p $(OBJ_DIR)
+	@mkdir -p $(OBJ_DIR)
 
 clean :
-	rm -f $(OBJS)
-	rm -rf $(OBJ_DIR)
+	@rm -f $(OBJS)
+	@rm -rf $(OBJ_DIR)
 
 fclean : clean
-	rm -f $(NAME)
+	@rm -f $(NAME)
 
 re : fclean all
 
