Added functions for initialization including initialization checking

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -5,7 +5,7 @@ CFLAGS = -Wall -Wextra -Werror -Iinclude
 
 MAIN = main.c
 SRCS = \
-$(addprefix src/, error.c valid_arg.c utils.c) 
+$(addprefix src/, error.c valid_arg.c utils.c init.c) 
 
 OBJ_DIR = obj
 OBJS = $(SRCS:src/%.c=$(OBJ_DIR)/%.o)
